Fixing Spacing2

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,5 @@
 // Global Styles
-html{
-    margin: -0.5%;
-}
+
 
 // Navbar Styles
 navbar{
@@ -10,6 +8,7 @@ navbar{
     align-content: space-around;
     padding: 0 5%;
     background: #fff;
+    padding-top: 5%;
 
     #leftBanner{
         display: inline-flex;
